Fix a Sonar nag